--- a/index.html
+++ b/index.html
@@ -4,14 +4,33 @@
 <head>
   <meta charset="utf-8">
   <title>Pearls of Wisdom</title>
+  <link rel="stylesheet" href="styles.css">
+
+  <style>
+     h1 {text-align: center;}
+     h3 {text-align: center;}
+     p {text-align: center;}
+     ul {text-align: center; list-style: inside;}
+     div {text-align: center;}
+
+     table.center {
+       margin-left: auto;
+       margin-right: auto;
+}
+
+</style>
+
 </head>
 
 <body>
-  <table cellspacing="20">
+  <table cellspacing="20" class="center">
+
+  </table>
+
     <tr>
-      <td><img src="Tom.jpg" width="210" height="270" alt="Tom Eckert Profile Picture"></td>
+      <td><img src="Tom_Circle.png" width="270" height="270" alt="Tom Eckert Profile Picture"></td>
       <td><h1>Tom Eckert</h1>
-      <p><em><strong>Expert <a href="https://tom-eckert.com/numerology-online-course">Numerologist</a> and Spiritual Guide</strong></em></p></td>
+      <h3><em><strong>Expert <a href="https://tom-eckert.com/numerology-online-course">Numerologist</a> and Spiritual Guide</strong></em></h3></td>
     </tr>
   </table>
 
@@ -19,7 +38,7 @@
 
   <p>For the past 20 years I've been practicing and dedicating my life to
     spiritual practice and inquiry. I've studies for 11 years with a spiritual
-    teacher and for 6 years with a master numerologist. I've been assiting
+    teacher and <br /> for 6 years with a master numerologist. I've been assiting
     numerous people of all ages on their path to ineer clarity, Soul fulfillment
     and spiritual growth.</p>
 
@@ -36,7 +55,7 @@
 
     <h3>Work Experience</h3>
 
-    <table>
+    <table class="center">
       <tr>
         <td>2010 - 2015</td>
         <td>Spiritual Coaching and Transformational sessions</td>
@@ -47,15 +66,19 @@
       </tr>
     </table>
     <br>
+ <div class="center">
+
 
     <a href="hobbies.html">My Hobbies</a>
       <br><br>
     <a href="contact.html">Contact Me</a>
-
+</div>
+<br>
     <hr>
-
+<br>
     <h3>Skills</h3>
-      <table cellspacing="10">
+      <table cellspacing="10" class="center">
+
         <tr>
           <td>Compassionate Listening</td>
           <td>👍👍👍👍👍</td>
@@ -64,7 +87,7 @@
         </tr>
         <tr>
           <td>Knowledge of Energetic Processes</td>
-          <td>👍👍👍👍</td>
+          <td>👍👍👍👍👍</td>
           <td>Meditation Skills</td>
           <td>👍👍👍👍👍</td>
         </tr>
