--- a/index.html
+++ b/index.html
@@ -7,18 +7,32 @@
   <link rel="stylesheet" href="styles.css">
 
   <style>
-     h1 {text-align: center;}
-     h3 {text-align: center;}
-     p {text-align: center;}
-     ul {text-align: center; list-style: inside;}
-     div {text-align: center;}
+    h1 {
+      text-align: center;
+    }
 
-     table.center {
-       margin-left: auto;
-       margin-right: auto;
-}
+    h3 {
+      text-align: center;
+    }
 
-</style>
+    p {
+      text-align: center;
+    }
+
+    ul {
+      text-align: center;
+      list-style: inside;
+    }
+
+    div {
+      text-align: center;
+    }
+
+    table.center {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  </style>
 
 </head>
 
@@ -27,11 +41,13 @@
 
   </table>
 
-    <tr>
-      <td><img src="Tom_Circle.png" width="270" height="270" alt="Tom Eckert Profile Picture"></td>
-      <td><h1>Tom Eckert</h1>
-      <h3><em><strong>Expert <a href="https://tom-eckert.com/numerology-online-course">Numerologist</a> and Spiritual Guide</strong></em></h3></td>
-    </tr>
+  <tr>
+    <td><img src="Tom_Circle.png" width="270" height="270" alt="Tom Eckert Profile Picture"></td>
+    <td>
+      <h1>Tom Eckert</h1>
+      <h3><em><strong>Expert <a href="https://tom-eckert.com/numerology-online-course">Numerologist</a> and Spiritual Guide</strong></em></h3>
+    </td>
+  </tr>
   </table>
 
 
@@ -42,56 +58,76 @@
     numerous people of all ages on their path to ineer clarity, Soul fulfillment
     and spiritual growth.</p>
 
-    <hr>
+  <hr>
 
-    <h3>Teaching and Sharing</h3>
-    <ul>
-      <li>Numerology for students worldwide</li>
-      <li>I guide people through spiritual processes of <a href="https://tom-eckert.com/spiritual-awakening-guidance-1on1">inner transformation</a></li>
-      <li>Pearls of <strong>spiritual wisdom</strong> through short blog posts</li>
+  <h3>Teaching and Sharing</h3>
+
+  <table class="center">
+    <tr>
+      <td>
+        <ul>
+    <tr>
+      <td>
+        <li>Numerology for students worldwide</li>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <li>I guide people through spiritual processes of <a href="https://tom-eckert.com/spiritual-awakening-guidance-1on1">inner transformation</a></li>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <li>Pearls of <strong>spiritual wisdom</strong> through short blog posts</li>
+      </td>
+    </tr>
     </ul>
+    </td>
 
-    <hr>
+    </tr>
+  </table>
 
-    <h3>Work Experience</h3>
+  <hr>
 
-    <table class="center">
-      <tr>
-        <td>2010 - 2015</td>
-        <td>Spiritual Coaching and Transformational sessions</td>
-      </tr>
-      <tr>
-        <td>2015 - 2021</td>
-        <td>Numerology Consultations and Numerology In-Depth Certification Training</td>
-      </tr>
-    </table>
-    <br>
- <div class="center">
+  <h3>Work Experience</h3>
+
+  <table class="center">
+    <tr>
+      <td>2010 - 2015</td>
+      <td>Spiritual Coaching and Transformational sessions</td>
+    </tr>
+    <tr>
+      <td>2015 - 2021</td>
+      <td>Numerology Consultations and Numerology In-Depth Certification Training</td>
+    </tr>
+  </table>
+  <br>
+  <div class="center">
 
 
     <a href="hobbies.html">My Hobbies</a>
-      <br><br>
+    <br><br>
     <a href="contact.html">Contact Me</a>
-</div>
-<br>
-    <hr>
-<br>
-    <h3>Skills</h3>
-      <table cellspacing="10" class="center">
+  </div>
+  <br>
+  <hr>
+  <br>
+  <h3>Skills</h3>
+  <table cellspacing="10" class="center">
 
-        <tr>
-          <td>Compassionate Listening</td>
-          <td>👍👍👍👍👍</td>
-          <td>Empathy</td>
-          <td>👍👍👍👍👍</td>
-        </tr>
-        <tr>
-          <td>Knowledge of Energetic Processes</td>
-          <td>👍👍👍👍👍</td>
-          <td>Meditation Skills</td>
-          <td>👍👍👍👍👍</td>
-        </tr>
-      </table>
+    <tr>
+      <td>Compassionate Listening</td>
+      <td>👍👍👍👍👍</td>
+      <td>Empathy</td>
+      <td>👍👍👍👍👍</td>
+    </tr>
+    <tr>
+      <td>Knowledge of Energetic Processes</td>
+      <td>👍👍👍👍👍</td>
+      <td>Meditation Skills</td>
+      <td>👍👍👍👍👍</td>
+    </tr>
+  </table>
 
 
 
